# WinProjects

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: interface.hpp  log.hpp  stdcxx.hpp  win.hpp  windows.hpp
projects/: CMakeLists.txt
projects/CorelDRAW-Plugins/: CMakeLists.txt
projects/CorelDRAW-Plugins/template/: export.cpp  global.cpp  global.h
projects/CorelDRAW-Plugins/template/ressdk/22.0.0.412/sdk/: VGAppPlugin.cpp  VGAppPlugin.h
projects/cmake-tests/main/: main.cpp
projects/tests/: CMakeLists.txt
projects/tests/cmake/: CMakeLists.txt  stdafx.h
projects/tests/common/: main.cpp  stdafx.h
projects/tools/devtools/: main.cpp  stdafx.h
projects/windows/win/: CMakeLists.txt  dllmain.cpp  export.cpp  export.h  source.cpp  source.def  stdafx.h
